@@ -243,7 +243,7 @@ IF(DEBUG)
     FIND_LIBRARY(EFENCE_LIB NAMES efence PATHS /usr/lib /usr/local/lib)
     IF(EFENCE_LIB MATCHES "NOTFOUND")
       MESSAGE("Electric Fence not installed - disabled.")
-      SET(EFENCE OFF)
+      SET(EFENCE OFF CACHE BOOL "" FORCE)
     ELSE(EFENCE_LIB MATCHES "NOTFOUND")
 
       SET(ADD_LIBS ${ADD_LIBS} ${EFENCE_LIB})
@@ -421,50 +421,52 @@ ELSE(MOSTHREAD_AVAILABLE)
 ENDIF(MOSTHREAD_AVAILABLE)
 
 # sound backends
-
 FIND_PACKAGE(PkgConfig)
+
 MACRO(CHECK_BACKEND BACKEND_OPTION BACKEND_NAME BACKEND_LIB BACKEND_HEADER BACKEND_TEST_FUNC)
-#IF(NOT ${BACKEND_OPTION}_CHECKED)
-#  SET(${BACKEND_OPTION}_CHECKED ON CACHE INTERNAL "")
+IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
+  IF(CMAKE_PKGCONFIG_EXECUTABLE)
+    PKGCONFIG(${BACKEND_NAME}
+              BACKEND_HAVE
+              BACKEND_INCLUDE_DIRS
+              BACKEND_DEFINES
+              BACKEND_LINK_DIRS
+              BACKEND_LIBS)
+  SET(${BACKEND_OPTION}_HAVE          ${BACKEND_HAVE}          CACHE INTERNAL "")
+  SET(${BACKEND_OPTION}_INCLUDE_DIRS "${BACKEND_INCLUDE_DIRS}" CACHE INTERNAL "")
+  SET(${BACKEND_OPTION}_DEFINES      "${BACKEND_DEFINES}"      CACHE INTERNAL "")
+  SET(${BACKEND_OPTION}_LINK_DIRS    "${BACKEND_LINK_DIRS}"    CACHE INTERNAL "")
+  SET(${BACKEND_OPTION}_LIBS         "${BACKEND_LIBS}"         CACHE INTERNAL "")
 
-SET(BACKEND_FOUND OFF)
-IF(${BACKEND_OPTION})
-    IF(CMAKE_PKGCONFIG_EXECUTABLE)
-      PKGCONFIG(${BACKEND_NAME} HAVE_BACKEND BACKEND_INCLUDE_DIRS BACKEND_DEFINES BACKEND_LINK_DIRS BACKEND_LIBS)
-      #MESSAGE("have ${HAVE_BACKEND} inc ${BACKEND_INCLUDE_DIRS} def ${BACKEND_DEFINES} linkdirs ${BACKEND_LINK_DIRS} libs ${BACKEND_LIBS}")
-    ENDIF(CMAKE_PKGCONFIG_EXECUTABLE)
+    #MESSAGE("have ${${BACKEND_OPTION}_HAVE} inc ${${BACKEND_OPTION}_INCLUDE_DIRS} def ${${BACKEND_OPTION}_DEFINES} linkdirs ${${BACKEND_OPTION}_LINK_DIRS} libs ${${BACKEND_OPTION}_LIBS}")
+  ENDIF(CMAKE_PKGCONFIG_EXECUTABLE)
 
-    # CHECK_INCLUDE_FILE() doesn't handle include dir, so check by hand
-    FILE(WRITE "${CMAKE_BINARY_DIR}/CMakeTmp/src.c"
-      "
-      #include <${BACKEND_HEADER}>
-      int main(){return 0;}
-      ")
-    # FIXME: What about defines?
-    TRY_COMPILE(HAVE_BACKEND_HEADER
-      ${CMAKE_BINARY_DIR}
-      ${CMAKE_BINARY_DIR}/CMakeTmp/src.c
-      CMAKE_FLAGS
-      "-DINCLUDE_DIRECTORIES:STRING=${BACKEND_INCLUDE_DIRS}")
+  # CHECK_INCLUDE_FILE() doesn't handle include dir, so check by hand
+  FILE(WRITE "${CMAKE_BINARY_DIR}/CMakeTmp/src.c"
+       "
+       #include <${BACKEND_HEADER}>
+       int main(){return 0;}
+       ")
+  # FIXME: What about defines?
+  TRY_COMPILE(HAVE_BACKEND_HEADER
+              ${CMAKE_BINARY_DIR}
+              ${CMAKE_BINARY_DIR}/CMakeTmp/src.c
+              CMAKE_FLAGS
+              "-DINCLUDE_DIRECTORIES:STRING=${${BACKEND_OPTION}_INCLUDE_DIRS}")
 
   IF(HAVE_BACKEND_HEADER)
     IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
-      SET(OS_OBJS ${OS_OBJS} ${${BACKEND_OPTION}_OBJS})
-      ADD_DEFINE(USE_BACKEND_${BACKEND_OPTION})
-      ADD_DEFINE("OPENAL_DLOPEN_${BACKEND_OPTION} 1")
-      INCLUDE_DIRECTORIES(${BACKEND_INCLUDE_DIRS})
-      MESSAGE(STATUS "${BACKEND_OPTION} back-end support - dynamic")
-      SET(BACKEND_FOUND ON)
+      SET(${BACKEND_OPTION}_FOUND ON CACHE INTERNAL "")
     ELSE(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
 
-      IF(BACKEND_LIBS MATCHES "^$")
-        FIND_LIBRARY(BACKEND_LIBS NAMES ${BACKEND_LIB} PATHS /usr/lib /usr/local/lib)
-      ENDIF(BACKEND_LIBS MATCHES "^$")
+      IF(${BACKEND_OPTION}_LIBS MATCHES "^$")
+        FIND_LIBRARY(${BACKEND_OPTION}_LIBS NAMES ${BACKEND_LIB} PATHS /usr/lib /usr/local/lib)
+      ENDIF(${BACKEND_OPTION}_LIBS MATCHES "^$")
 
-      IF(BACKEND_LIBS MATCHES "NOTFOUND")
+      IF(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
         MESSAGE(STATUS "${BACKEND_OPTION} back-end library ${BACKEND_LIB} not found.")
         SET(${BACKEND_OPTION} OFF)
-      ELSE(BACKEND_LIBS MATCHES "NOTFOUND")
+      ELSE(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
 
         # check whether back-end is link-able
         FILE(WRITE "${CMAKE_BINARY_DIR}/CMakeTmp/src.c"
@@ -476,47 +478,52 @@ IF(${BACKEND_OPTION})
           ${CMAKE_BINARY_DIR}
           ${CMAKE_BINARY_DIR}/CMakeTmp/src.c
           CMAKE_FLAGS
-          "-DINCLUDE_DIRECTORIES:STRING=${BACKEND_INCLUDE_DIRS}"
-          "-DLINK_DIRECTORIES:STRING=${BACKEND_LINK_DIRS}"
-          "-DLINK_LIBRARIES:STRING=${BACKEND_LIBS}")
+          "-DINCLUDE_DIRECTORIES:STRING=${${BACKEND_OPTION}_INCLUDE_DIRS}"
+          "-DLINK_DIRECTORIES:STRING=${${BACKEND_OPTION}_LINK_DIRS}"
+          "-DLINK_LIBRARIES:STRING=${${BACKEND_OPTION}_LIBS}")
 
         IF(BACKEND_LINKS)
-          SET(OS_OBJS ${OS_OBJS} ${${BACKEND_OPTION}_OBJS})
-          ADD_DEFINE(USE_BACKEND_${BACKEND_OPTION})
-          SET(ADD_LIBS ${ADD_LIBS} ${BACKEND_LIBS})
-          INCLUDE_DIRECTORIES(${BACKEND_INCLUDE_DIRS})
-          LINK_DIRECTORIES(${BACKEND_LINK_DIRS})
-          MESSAGE(STATUS "${BACKEND_OPTION} back-end support - static")
-          SET(BACKEND_FOUND ON)
+          SET(${BACKEND_OPTION}_FOUND ON CACHE INTERNAL "")
         ELSE(BACKEND_LINKS)
 
           MESSAGE(STATUS "${BACKEND_OPTION} back-end doesn't link.")
         ENDIF(BACKEND_LINKS)
-      ENDIF(BACKEND_LIBS MATCHES "NOTFOUND")
+      ENDIF(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
     ENDIF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
   ELSE(HAVE_BACKEND_HEADER)
 
     MESSAGE(STATUS "${BACKEND_OPTION} back-end header ${BACKEND_HEADER} not found.")
   ENDIF(HAVE_BACKEND_HEADER)
-ENDIF(${BACKEND_OPTION})
+ENDIF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
 
-IF(NOT BACKEND_FOUND)
+IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
+  SET(OS_OBJS ${OS_OBJS} ${${BACKEND_OPTION}_OBJS})
+  ADD_DEFINE(USE_BACKEND_${BACKEND_OPTION})
+  INCLUDE_DIRECTORIES(${${BACKEND_OPTION}_INCLUDE_DIRS})
+
+  IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+    ADD_DEFINE("OPENAL_DLOPEN_${BACKEND_OPTION} 1")
+    MESSAGE(STATUS "${BACKEND_OPTION} back-end support - dynamic")
+  ELSE(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+
+    SET(ADD_LIBS ${ADD_LIBS} ${${BACKEND_OPTION}_LIBS})
+    LINK_DIRECTORIES(${${BACKEND_OPTION}_LINK_DIRS})
+    MESSAGE(STATUS "${BACKEND_OPTION} back-end support - static")
+  ENDIF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+ELSE(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
+
   MESSAGE(STATUS "${BACKEND_OPTION} back-end support - disabled.")
-  SET(${BACKEND_OPTION} OFF)
-ENDIF(NOT BACKEND_FOUND)
-#ENDIF(NOT ${BACKEND_OPTION}_CHECKED)
+  SET(${BACKEND_OPTION} OFF CACHE BOOL "" FORCE)
+ENDIF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
 ENDMACRO(CHECK_BACKEND)
 
-#IF(NOT CHECKED_BACKENDS)
-  CHECK_BACKEND(ALSA   alsa       asound     alsa/asoundlib.h    snd_pcm_info_sizeof)
-  CHECK_BACKEND(ARTS   artsc      artsc      artsc.h             arts_free)
-  CHECK_BACKEND(ESD    esd        esd        esd.h               esd_audio_open)
-  CHECK_BACKEND(SDL    sdl        sdl        SDL.h               SDL_LockAudio)
+CHECK_BACKEND(ALSA   alsa       asound     alsa/asoundlib.h    snd_pcm_info_sizeof)
+CHECK_BACKEND(ARTS   artsc      artsc      artsc.h             arts_free)
+CHECK_BACKEND(ESD    esd        esd        esd.h               esd_audio_open)
+CHECK_BACKEND(SDL    sdl        sdl        SDL.h               SDL_LockAudio)
 
-  CHECK_BACKEND(MP3    smpeg      smpeg      smpeg.h             SMPEG_play)
-  CHECK_BACKEND(VORBIS vorbisfile vorbisfile vorbis/vorbisfile.h ov_clear)
-  #SET(CHECKED_BACKENDS ON CACHE INTERNAL "")
-#ENDIF(NOT CHECKED_BACKENDS)
+CHECK_BACKEND(MP3    smpeg      smpeg      smpeg.h             SMPEG_play)
+CHECK_BACKEND(VORBIS vorbisfile vorbisfile vorbis/vorbisfile.h ov_clear)
 
 IF(WAVEOUT)
   SET(OS_OBJS ${OS_OBJS} ${WAVEOUT_OBJS})
