@@ -1,3 +1,7 @@
+2006-01-07  Prakash Punnoor <prakash@punnoor.de>
+
+	* CMakeLists.txt: Cache back-ends detection results
+
 2006-01-06  Prakash Punnoor <prakash@punnoor.de>
 
 	* CMakeLists.txt: Sync CFLAGS to configure.ac, but keeping -O2, as *no*
